--- a/Changes
+++ b/Changes
@@ -73,5 +73,8 @@ Revision history for Perl extension WebService::Browshot.
  	- API 1.10
 	- add method screenshot_delete
 
-1.10.1 Thu Apr 25 2012 22:32:00
+1.10.1 Thu Apr 25 2013 22:32:00
  	- Fix SSL warning
+
+1.11.0 Thu May 09 2013 21:03:00
+	- Optional HTTP timeout
