--- a/Changes
+++ b/Changes
@@ -78,3 +78,10 @@ Revision history for Perl extension WebService::Browshot.
 
 1.11.0 Thu May 09 2013 21:03:00
 	- Optional HTTP timeout
+
+1.11.1 Wed Jul 17 2013 21:46:00
+	- Return Browshot response in case of error if the reply is valid JSON.
+
+1.12   Mon Aug 12 2013 21:07:00
+ 	- API 1.12
+	- add method screenshot_search
