--- a/README
+++ b/README
@@ -26,7 +26,7 @@ The source code is available on github at https://github.com/juliensobrier/brows
 
 CPAN
 
-The library is available on CPAN at http://search.cpan.org/perldoc?WebService::Browshot
+The library is available on CPAN at https://metacpan.org/pod/WebService::Browshot
 
 COPYRIGHT AND LICENCE
 
